also update refresh time when click refresh button

--- a/server/main/webPage/index.html
+++ b/server/main/webPage/index.html
@@ -167,7 +167,7 @@
         })
         $('#refresh').on('click',function () {
             reloadPage()
-
+            ShowTime()
         })
     </script>
 </body>
